fix swipeable teaser - shouldn't stretch vertically

--- a/source/_patterns/20-molecules/teaser/teaser.scss
+++ b/source/_patterns/20-molecules/teaser/teaser.scss
@@ -100,7 +100,6 @@
 // with the according tablet+ styles
 .teaser__wrapper--swipeable {
     .teaser {
-        height: 100%;
         width: 100%;
 
         .teaser__main {
